--- a/Blazor/Components/Layout/MainLayout.razor
+++ b/Blazor/Components/Layout/MainLayout.razor
@@ -1,4 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using Blazor.Services
+@inherits LayoutComponentBase
+
+@inject NavigationInterceptor NavigationInterceptor
 
 @Body
 
@@ -7,3 +10,11 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code
+{
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await NavigationInterceptor.OnNavigateAsync();
+    }
+}
