--- a/Blazor/Components/Routes.razor
+++ b/Blazor/Components/Routes.razor
@@ -3,7 +3,7 @@
 @using Blazor.Services
 
 @inject NavigationManager NavigationManager
-@inject NavigationInterceptor NavigationInterceptor
+@inject UserActionInterceptor UserActionInterceptor
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
